--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body, html {
 
     <h1 style="font-size:50px">Join Hacking Clan</h1>
 
-    <p><b>HINT: </b>This is a simple challenge to be solve by anyone who feels hes a 1337, take note of all artifact on this page, especially the ones that begins with <i>137 80 78 71 13 10 26 10</i> and remember you are welcome to the <b>"__Mos5ad"</b>.</p>
+    <p><b>HINT: </b>This is a simple challenge to be solve by anyone who feels hes a 1337, take note of all artifact on this page, especially the ones that begins with <i>137 80 78 71 13 10 26 10</i> and remember you are welcome and <b>"__Mos5ad"</b>.</p>
 
     <button onclick="alert('What you seek is right on this page')">Hint</button>
 
